# OrderBookSimulator

./: CMakeLists.txt  metrics.csv
data/: metric.ipynb  metrics.csv
src/barGeneration/: CMakeLists.txt  alpaca_data.jsonl  app.cc  bars.parquet  bars.txt  channel.hpp  configBars.h  networking.hpp
